# chess

./: .gitmodules  CMakeLists.txt  README.md
src/: Analysis.cpp  Analysis.h  Application.cpp  Application.h  Attacks.cpp  Attacks.h  Board.cpp  Board.h  CMakeLists.txt  Chess.cpp  Chess.h  Direction.h  Game.cpp  Game.h  PieceSelector.h  SDLContext.h  Spritesheet.cpp  Spritesheet.h  constants.h  main.cpp  utils.h
src/chess/: Analysis.cpp  Board.cpp  Board.h  CMakeLists.txt  Direction.h  Game.cpp  Game.h  constants.h  utils.h
src/chess_app/: Application.cpp  Application.h  CMakeLists.txt  Font.cpp  Font.h  PieceSelector.cpp  PieceSelector.h  SDLContext.cpp  SDLContext.h  utils.h
tests/: CMakeLists.txt  test.cpp  test_castle_kingside.txt  test_castle_kingside.yaml  test_castle_queenside.yaml  test_double_check.yaml  test_en_passant.yaml  test_moved_pawn.yaml  test_new_board.txt  test_new_board.yaml  test_pawn_attack.txt  test_pawn_attack.yaml  test_rook_pin.txt  test_rook_pin.yaml
